feat: Added unit test

--- a/Mariusz.Piotrowski/appsettings.json
+++ b/Mariusz.Piotrowski/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=iteger-mpi\\MSSQL;Database=ArticlesDb;User ID=sa;Password=Admin@;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=ArticlesDb;User ID=sa;Password=Admin!@;TrustServerCertificate=True;"
   }
 }
