--- a/Mariusz.Piotrowski/Dockerfile
+++ b/Mariusz.Piotrowski/Dockerfile
@@ -1,32 +1,20 @@
-# Zobacz https://aka.ms/customizecontainer, aby dowiedzieć się, jak dostosować kontener debugowania i jak program Visual Studio używa tego pliku Dockerfile do kompilowania obrazów w celu szybszego debugowania.
-
-# W zależności od systemu operacyjnego maszyn hostów, które będą kompilować lub uruchamiać kontenery, może być konieczna zmiana obrazu określonego w instrukcji FROM.
-# Aby uzyskać więcej informacji, zobacz https://aka.ms/containercompat
-
-# Ten etap jest używany podczas uruchamiania z programu VS w trybie szybkim (domyślnie dla konfiguracji debugowania)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809 AS base
+# Etap build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
+# Kopiujemy wszystkie potrzebne foldery
+COPY ./Mariusz.Piotrowski ./Mariusz.Piotrowski
+COPY ./Mariusz.Piotrowski.Application ./Mariusz.Piotrowski.Application
+COPY ./Mariusz.Piotrowski.Infrastructure ./Mariusz.Piotrowski.Infrastructure
+COPY ./Mariusz.Piotrowski.Domain ./Mariusz.Piotrowski.Domain
 
-# Ten etap służy do kompilowania projektu usługi
-FROM mcr.microsoft.com/dotnet/sdk:8.0-nanoserver-1809 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["Mariusz.Piotrowski/Mariusz.Piotrowski.csproj", "Mariusz.Piotrowski/"]
-RUN dotnet restore "./Mariusz.Piotrowski/Mariusz.Piotrowski.csproj"
-COPY . .
-WORKDIR "/src/Mariusz.Piotrowski"
-RUN dotnet build "./Mariusz.Piotrowski.csproj" -c %BUILD_CONFIGURATION% -o /app/build
+WORKDIR /app/Mariusz.Piotrowski
+RUN dotnet restore
+RUN dotnet publish -c Release -o out
 
-# Ten etap służy do publikowania projektu usługi do skopiowania do etapu końcowego
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Mariusz.Piotrowski.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
-
-# Ten etap jest używany w środowisku produkcyjnym lub w przypadku uruchamiania z programu VS w trybie regularnym (domyślnie, gdy nie jest używana konfiguracja debugowania)
-FROM base AS final
+# Etap uruchomienia
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Mariusz.Piotrowski.dll"]
+COPY --from=build /app/Mariusz.Piotrowski/out .
+
+ENTRYPOINT ["dotnet", "Mariusz.Piotrowski.Api.dll"]
